--- a/application/package.json
+++ b/application/package.json
@@ -22,7 +22,7 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.1",
-    "next": "14.2.4",
+    "next": "^14.2.18",
     "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
