--- a/application/package.json
+++ b/application/package.json
@@ -14,18 +14,21 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@metamask/sdk-react": "^0.31.0",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/material-nextjs": "^5.15.11",
     "@pinata/sdk": "^2.1.0",
+    "@prisma/client": "^6.0.1",
     "alchemy-sdk": "^3.3.1",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
-    "ethers": "^6.13.1",
+    "ethers": "^6.13.4",
     "next": "^14.2.18",
     "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "siwe": "^2.3.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -36,6 +39,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
+    "prisma": "^6.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
