--- a/application/package.json
+++ b/application/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-data-grid": "^7.23.0",
     "@pinata/sdk": "^2.1.0",
     "@prisma/client": "^6.0.1",
     "alchemy-sdk": "^3.3.1",
